src/objects/Appointment_Attendee__c.object
<CustomObject>
    <description>A junction object to connect Appointments with multiple RBC Clients and Staff</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Appointment Attendees</relationshipLabel>
        <relationshipName>Appointment_Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Appointment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Appointment</label>
        <referenceTo>Appointment__c</referenceTo>
        <relationshipLabel>Appointment Attendees</relationshipLabel>
        <relationshipName>Appointment_Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attendee_Name__c</fullName>
        <formula>if(
ispickval( Type__c,&quot;Staff&quot;),
 Staff_Name__r.FirstName + &quot; &quot; +  Staff_Name__r.LastName ,
 Contact__r.FirstName + &quot; &quot; + Contact__r.LastName
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Appointment Attendees</relationshipLabel>
        <relationshipName>Appointment_Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Staff_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Appointment_Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead/Client</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Appointment Attendee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AA-{000000}</displayFormat>
        <label>Appointment Attendee Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointment Attendees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>